style: fix donation padding on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -853,6 +853,7 @@ section.update-signup div.circle {
 	}
 	.donation-progress {
 		grid-column: span 1;
+		padding: 50px 20px;
 	}
 
 	.hero-meta {
